# olal

./: .gitignore  Cargo.toml  FUTURE.md  README.md  TASKS.md
crates/olal-cli/: Cargo.toml
crates/olal-cli/src/: main.rs
crates/olal-cli/src/commands/: ask.rs  capture.rs  clips.rs  config.rs  digest.rs  embed.rs  ingest.rs  init.rs  mod.rs  project.rs  recent.rs  search.rs  shell.rs  show.rs  stats.rs  status.rs  tag.rs  task.rs  watch.rs  youtube.rs
crates/olal-config/: Cargo.toml
crates/olal-config/src/: config.rs  error.rs  lib.rs  paths.rs
crates/olal-core/: Cargo.toml
crates/olal-core/src/: error.rs  lib.rs  types.rs
crates/olal-db/: Cargo.toml
crates/olal-db/src/: database.rs  error.rs  lib.rs  migrations.rs  operations.rs
crates/olal-db/src/operations/: chunks.rs  items.rs  projects.rs  queue.rs  stats.rs  tags.rs  tasks.rs  vectors.rs
crates/olal-ingest/: Cargo.toml
crates/olal-ingest/src/: ai_enrich.rs  chunker.rs  error.rs  ingestor.rs  lib.rs  watcher.rs
crates/olal-ingest/src/parsers/: audio.rs  markdown.rs  mod.rs  pdf.rs  text.rs  video.rs
crates/olal-ollama/: Cargo.toml
crates/olal-ollama/src/: client.rs  error.rs  lib.rs  rag.rs  types.rs
crates/olal-process/: Cargo.toml
crates/olal-process/src/: error.rs  ffmpeg.rs  lib.rs  ocr.rs  transcribe.rs
