[workspace]
members = [
    "crates/olal-core",
    "crates/olal-db",
    "crates/olal-config",
    "crates/olal-ingest",
    "crates/olal-process",
    "crates/olal-ollama",
    "crates/olal-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lalo Morales <lalomorales22@github.com>"]
license = "MIT"
repository = "https://github.com/lalomorales22/olal"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
directories = "5"
walkdir = "2"
glob = "0.3"

# File system watching
notify = "6"
notify-debouncer-mini = "0.4"

# Document processing
pulldown-cmark = "0.9"

# HTTP client (for Ollama)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
futures-util = "0.3"

# Internal crates
olal-core = { path = "crates/olal-core" }
olal-db = { path = "crates/olal-db" }
olal-config = { path = "crates/olal-config" }
olal-ingest = { path = "crates/olal-ingest" }
olal-process = { path = "crates/olal-process" }
olal-ollama = { path = "crates/olal-ollama" }
