[package]
name = "olal-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
