[package]
name = "olal-ollama"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ollama integration for Axiom - embeddings, semantic search, and RAG"

[dependencies]
olal-config = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
